Se agrega descripción a pasos del análisis

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,13 @@ stages:
         projects: 'src/PocRandD.Test/PocRandD.Test.csproj'
       displayName: 'Unit_Tests'
     - script: sudo dotnet tool install --tool-path=/usr/bin dotnet-sonarscanner --version 4.10.0
+      displayName: 'Static_Analysis__InstallSonnarScanner'
     - script: sudo dotnet sonarscanner begin /o:gerardoat /k:gerardoat_integracionpipelines /d:sonar.host.url=https://sonarcloud.io /version:$(Build.BuildNumber)
+      displayName: 'Static_Analysis__BeginAnalysis'
     - script: sudo dotnet build src --configuration Release
+      displayName: 'Static_Analysis__Building'
     - script: sudo SONAR_TOKEN=aff7a6afb8e4861ffd38a5ad975672f58598658a dotnet sonarscanner end
-      displayName: 'Static_Analysis'
+      displayName: 'Static_Analysis__EndAnalysis'
     - script: echo Publish_Dev
       displayName: 'Publish_Dev'
     - script: echo Functional_Tests
