--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
       displayName: 'Unit_Tests'
     - script: sudo dotnet tool install --tool-path=/usr/bin dotnet-sonarscanner --version 4.10.0
       displayName: 'Static_Analysis__InstallSonnarScanner'
-    - script: sudo dotnet sonarscanner begin /o:gerardoat /k:gerardoat_integracionpipelines /d:sonar.host.url=https://sonarcloud.io /version:$(Build.BuildNumber)
+    - script: sudo dotnet sonarscanner begin /o:gerardoat /k:gerardoat_integracionpipelines /d:sonar.host.url=https://sonarcloud.io /version:$(Build.SourceVersion)
       displayName: 'Static_Analysis__BeginAnalysis'
     - script: sudo dotnet build src --configuration Release
       displayName: 'Static_Analysis__Building'
