--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,11 @@ variables:
 steps:
 - script: dotnet build src --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Azure-Trial-Maru'
+    appType: 'webAppLinux'
+    WebAppName: 'pruebaspipelines'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    RuntimeStack: 'DOTNETCORE|3.1'
