--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,5 @@ steps:
     azureSubscription: 'Azure-Trial-Maru'
     appType: 'webAppLinux'
     WebAppName: 'pruebaspipelines'
-    packageForLinux: '$(System.DefaultWorkingDirectory)/src/**/*.zip'
+    packageForLinux: '/**/*.zip'
     RuntimeStack: 'DOTNETCORE|3.1'
