Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,22 +15,12 @@ variables:
 steps:
 - script: dotnet build src --configuration $(buildConfiguration)
   displayName: 'Build'
-- task: DotNetCoreCLI@2
-  displayName: 'Create the Publish'
+- task: VSTest@2
   inputs:
-    command: publish
-    publishWebProjects: false
-    projects: 'src/PocRandD/PocRandD.csproj'
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: true
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifacts'
-- task: AzureRmWebAppDeployment@4
-  displayName: 'Deploy to Azure AppService'
-  inputs:
-    ConnectionType: 'AzureRM'
-    azureSubscription: 'SuscripcionMaru'
-    appType: 'webAppLinux'
-    WebAppName: 'pocpipelines'
-    packageForLinux: '$(Build.ArtifactStagingDirectory)/**/*.zip'
-    RuntimeStack: 'DOTNETCORE|3.1'
+    testSelector: 'testAssemblies'
+    testAssemblyVer2: |
+      **\*test*.dll
+      !**\*TestAdapter.dll
+      !**\obj\**
+    searchFolder: '$(System.DefaultWorkingDirectory)'
+    testRunTitle: 'Pruebas funcionales'
