--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'ubuntu-latest'
 
 variables:
   buildConfiguration: 'Release'
@@ -16,7 +16,27 @@ steps:
 - script: dotnet build src --configuration $(buildConfiguration)
   displayName: 'Build'
 - task: DotNetCoreCLI@2
+  displayName: 'Create the Publish to Selenium'
   inputs:
-    command: 'test'
+    command: publish
+    publishWebProjects: false
     projects: 'src/PocRandD.SeleniumTest/PocRandD.SeleniumTest.csproj'
-  displayName: 'Pruebas funcionales'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: false
+    modifyOutputPath: false
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifacts'
+- task: DotNetCoreCLI@2      
+  displayName: 'run selenium test'
+  inputs:
+    command: custom
+    projects: '**/PocRandD.SeleniumTest.dll'
+    custom: vstest
+    arguments: '--logger:trxlogfilename=TEST.xml'
+- task: PublishTestResults@2
+  displayName: 'Publish Test Results '
+  inputs:
+    testResultsFormat: VSTest
+    testResultsFiles: '**/TEST.xml'
+    mergeTestResults: true
+    testRunTitle: 'Selenium Test'
