--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,27 +18,7 @@ steps:
 - script: dotnet build src --configuration $(buildConfiguration)
   displayName: 'Build'
 - task: DotNetCoreCLI@2
-  displayName: 'Create the Publish to Selenium'
   inputs:
-    command: publish
-    publishWebProjects: false
+    command: 'test'
     projects: 'src/PocRandD.SeleniumTest/PocRandD.SeleniumTest.csproj'
-    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
-    zipAfterPublish: false
-    modifyOutputPath: false
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifacts'
-- task: DotNetCoreCLI@2      
-  displayName: 'run selenium test'
-  inputs:
-    command: custom
-    projects: '**/PocRandD.SeleniumTest.dll'
-    custom: vstest
-    arguments: '--logger:trx;logfilename=TEST.xml'
-- task: PublishTestResults@2
-  displayName: 'Publish Test Results '
-  inputs:
-    testResultsFormat: VSTest
-    testResultsFiles: '**/TEST.xml'
-    mergeTestResults: true
-    testRunTitle: 'Selenium Test'
+  displayName: 'Pruebas funcionales'
