Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
 variables:
   buildConfiguration: 'Release'
   buildId: $(Build.SourceVersion)
-  resourcesId: $(buildId)
+  resourcesId: res$(buildId)
 
 stages:
 - stage: Development
