--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 
 variables:
   buildConfiguration: 'Release'
-  buildId: $(Build.SourceVersion)
+  buildId: $(Build.ShortSha)
   resourcesId: res$(buildId)
 
 stages:
