--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
 variables:
   buildConfiguration: 'Release'
   buildId: $(Build.BuildNumber)
-  resourcesId: res$(buildId)
+  resourcesId: rs$(buildId)
 
 stages:
 - stage: Development
