--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ stages:
         azureResourceManagerConnection: 'SuscripcionMaru(d6c2c6fa-eaa9-4d22-bd11-da6eacb13f90)'
         subscriptionId: 'd6c2c6fa-eaa9-4d22-bd11-da6eacb13f90'
         action: 'Create Or Update Resource Group'
-        resourceGroupName: $(resourceGroup)
+        resourceGroupName: 'PruebasAprovAutomaticRG'
         location: 'South Central US'
         templateLocation: 'Linked artifact'
         csmFile: 'infra/Templates/Web App/template.json'
