Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,9 @@ stages:
     steps:
     - script: echo $(resourceGroup)
     - script: echo $(appService)
-    - task: AzureResourceManagerTemplateDeployment@3
+    - task: AzureCLI@2
       inputs:
-        deploymentScope: 'Resource Group'
-        azureResourceManagerConnection: 'Free Trial(d6c2c6fa-eaa9-4d22-bd11-da6eacb13f90)'
-        subscriptionId: 'd6c2c6fa-eaa9-4d22-bd11-da6eacb13f90'
-        action: 'Create Or Update Resource Group'
-        resourceGroupName: 'PruebasAprovAutomaticRG'
-        location: 'South Central US'
-        templateLocation: 'Linked artifact'
-        csmFile: 'infra/Templates/Web App/template.json'
-        csmParametersFile: 'infra/Templates/Web App/parameters.json'
-        deploymentMode: 'Incremental'
+        azureSubscription: 'Free Trial(d6c2c6fa-eaa9-4d22-bd11-da6eacb13f90)'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: 'az group list --output-table'
