--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ stages:
         azureSubscription: 'Free Trial(d6c2c6fa-eaa9-4d22-bd11-da6eacb13f90)'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
-        inlineScript: 'az group list --output-table'
+        inlineScript: 'az group list --output table'
