--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ stages:
         action: 'Create Or Update Resource Group'
         templateLocation: 'Linked artifact'
         resourceGroupName: $(resourceGroup)
+        location: $(region)
         csmFile: 'infra/Templates/Web App/SvcPlan-template.json'
         csmParametersFile: 'infra/Templates/Web App/SvcPlan-parameters.json'
         overrideParameters: '-serverFarmResourceGroup $(resourceGroup)'
