--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ variables:
   buildId: $(Build.BuildNumber)
   resourcesId: res-$(buildId)
   resourceGroup: RG-$(resourcesId)
-  appService: AppSvc-$(resourcesId)
+  appServicePlan: SvcPlan-$(resourcesId)
+  appService: AppSvc-$(appServicePlan)
 
 stages:
 - stage: Development
@@ -34,6 +35,6 @@ stages:
         location: $(region)
         csmFile: 'infra/Templates/Web App/SvcPlan-template.json'
         csmParametersFile: 'infra/Templates/Web App/SvcPlan-parameters.json'
-        overrideParameters: '-serverFarmResourceGroup $(resourceGroup)'
+        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -name $(appServicePlan)'
         deploymentMode: 'Incremental'
       displayName: 'Create App Service Plan'
