--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,6 +35,6 @@ stages:
         location: $(region)
         csmFile: 'infra/Templates/Web App/SvcPlan-template.json'
         csmParametersFile: 'infra/Templates/Web App/SvcPlan-parameters.json'
-        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -name $(appServicePlan)'
+        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -hostingPlanName $(appServicePlan) -name $(appService)'
         deploymentMode: 'Incremental'
       displayName: 'Create App Service Plan'
