--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,9 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: 'az group create --name $(resourceGroup) --location $(region)'
       displayName: 'Create Resource Group'
+    - bash: |
+        export IDAPP=$(build)
+        echo "${IDAPP/./-}"
     - task: AzureResourceManagerTemplateDeployment@3
       inputs:
         deploymentScope: 'Resource Group'
@@ -35,6 +38,6 @@ stages:
         location: $(region)
         csmFile: 'infra/Templates/Web App/SvcPlan-template.json'
         csmParametersFile: 'infra/Templates/Web App/SvcPlan-parameters.json'
-        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -hostingPlanName $(appServicePlan) -name $(appService)'
+        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -hostingPlanName $(appServicePlan) -name ${IDAPP/./-}'
         deploymentMode: 'Incremental'
       displayName: 'Create App Service Plan'
