--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,7 @@ variables:
   buildConfiguration: 'Release'
   region: 'southcentralus'
   buildId: $(Build.BuildNumber)
+  buildIdHyphen: $[replace(variables['Build.BuildNumber'],'.','-')]
   resourcesId: res-$(buildId)
   resourceGroup: RG-$(resourcesId)
   appServicePlan: SvcPlan-$(resourcesId)
@@ -24,9 +25,6 @@ stages:
         scriptLocation: 'inlineScript'
         inlineScript: 'az group create --name $(resourceGroup) --location $(region)'
       displayName: 'Create Resource Group'
-    - bash: |
-        export IDAPP=$(build)
-        echo "${IDAPP/./-}"
     - task: AzureResourceManagerTemplateDeployment@3
       inputs:
         deploymentScope: 'Resource Group'
@@ -38,6 +36,6 @@ stages:
         location: $(region)
         csmFile: 'infra/Templates/Web App/SvcPlan-template.json'
         csmParametersFile: 'infra/Templates/Web App/SvcPlan-parameters.json'
-        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -hostingPlanName $(appServicePlan) -name ${IDAPP/./-}'
+        overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -hostingPlanName $(appServicePlan) -name AppSvs-$(buildIdHyphen)'
         deploymentMode: 'Incremental'
       displayName: 'Create App Service Plan'
