--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,8 +35,8 @@ stages:
         templateLocation: 'Linked artifact'
         resourceGroupName: $(resourceGroup)
         location: $(region)
-        csmFile: 'infra/Templates/Web App/SvcPlan-template.json'
-        csmParametersFile: 'infra/Templates/Web App/SvcPlan-parameters.json'
+        csmFile: 'infra/Templates/Web App/template.json'
+        csmParametersFile: 'infra/Templates/Web App/parameters.json'
         overrideParameters: '-serverFarmResourceGroup $(resourceGroup) -hostingPlanName $(appServicePlan) -name AppSvs-$(buildIdHyphen)'
         deploymentMode: 'Incremental'
       displayName: 'Create App Service Plan'
