--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,7 @@ variables:
   resourcesId: res-$(buildId)
   resourceGroup: RG-$(resourcesId)
   appServicePlan: SvcPlan-$(resourcesId)
-  UriAppPocRandD2: https://$[replace(variables['Build.BuildNumber'],'.','-')].azurewebsites.net
-  UriAppPocRandD: $[format('https://{0}.azurewebsites.net', replace(variables['Build.BuildNumber'],'.','-'))]
+  UriAppPocRandD: $[format('https://appsvs-{0}.azurewebsites.net', replace(variables['Build.BuildNumber'],'.','-'))]
 
 stages:
 - stage: Development
