Publish artifacts selenium results

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,5 +87,8 @@ stages:
         command: 'test'
         projects: 'src/PocRandD.SeleniumTest/PocRandD.SeleniumTest.csproj'
       displayName: 'FunctionalTests'
+    - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact Selenium Results'    
     dependsOn: Build_UnitTests_Analysis_And_Deploy
+    
     condition: succeeded()
