se integra lo de JMeter

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,6 +89,17 @@ stages:
       displayName: 'FunctionalTests'
     - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact Selenium Results'    
-    dependsOn: Build_UnitTests_Analysis_And_Deploy
-    
+    dependsOn: Build_UnitTests_Analysis_And_Deploy    
     condition: succeeded()
+  - job: JMeterTests
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+      - task: Bash@3
+        displayName: Execute JMeter tests
+        inputs:
+          targetType: filePath
+          filePath: 'jmeter/test.sh'
+          arguments: '$PWD jmeterpocrandd.jmx $(host) $(buildId)'
+          workingDirectory: jmeter
+          failOnStderr: false
