ejeecución serializada selenium->jmeter

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -94,6 +94,7 @@ stages:
   - job: JMeterTests
     pool:
       vmImage: ubuntu-latest
+    dependsOn: SeleniumTests
     steps:
       - task: Bash@3
         displayName: Execute JMeter tests
